[gd_scene load_steps=6 format=3 uid="uid://7j5c4nxlv4vn"]

[ext_resource type="Script" uid="uid://ce6uity8xc2h6" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://cx46cna5sm6gl" path="res://player.gd" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://bk3m60xa42bxo" path="res://icon.svg" id="3_lquwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(66, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(177.668, 71.6421)

[node name="main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(41.1434, 312.989)
script = ExtResource("2_1bvp3")

[node name="Sprite2D" type="Sprite2D" parent="player"]
position = Vector2(5, 3)
scale = Vector2(0.536122, 0.535707)
texture = ExtResource("3_lquwl")

[node name="Area2D" type="Area2D" parent="player"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2D"]
position = Vector2(5.03992, 0.800354)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(4.85663, 2.01105)

[node name="jebakan!" type="Area2D" parent="." groups=["jebakan"]]
position = Vector2(373, 144)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="jebakan!"]
position = Vector2(18576, -117)
scale = Vector2(300, 0.496)
texture = ExtResource("3_lquwl")

[node name="Sprite2D2" type="Sprite2D" parent="jebakan!"]
position = Vector2(18574, 539)
scale = Vector2(300, 0.496)
texture = ExtResource("3_lquwl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="jebakan!"]
position = Vector2(11141, -116.23)
scale = Vector2(132.494, -0.704346)
shape = SubResource("RectangleShape2D_h2yge")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="jebakan!"]
position = Vector2(11129, 546)
scale = Vector2(132.494, -0.704346)
shape = SubResource("RectangleShape2D_h2yge")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Buttonrgt" type="Button" parent="CanvasLayer"]
offset_left = 918.0
offset_top = 561.0
offset_right = 1024.0
offset_bottom = 686.0
scale = Vector2(1.09796, 0.654066)

[node name="Buttonjmp" type="Button" parent="CanvasLayer"]
offset_left = 918.0
offset_top = 450.0
offset_right = 1025.0
offset_bottom = 541.0

[connection signal="area_entered" from="player/Area2D" to="player" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="player/Area2D" to="player" method="_on_area_2d_area_exited"]
[connection signal="button_down" from="CanvasLayer/Buttonrgt" to="player" method="_on_buttonrgt_button_down"]
[connection signal="button_up" from="CanvasLayer/Buttonrgt" to="player" method="_on_buttonrgt_button_up"]
[connection signal="pressed" from="CanvasLayer/Buttonjmp" to="player" method="_on_buttonjmp_pressed"]
